--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,25 @@
-#This gitignore file is created for UTAU (and other singing voice synthesizers) voicebank development
-#example repo: https://github.com/oxygen-dioxide/hitsuboku-kumi-chn/
-
 #Adobe Audition
 *.pkf
 
-#UTAU
-*.frq
-*.mrq
-*.llsm
-*.pmk
-*.vs4ufrq
-*.frc
-*.dio
+#UTAU Engines
 *.ctspec
 *.d4c
+*.dio
+*.frc
+*.frt
+*.frq
+*.llsm
+*.mrq
+*.pkf
+*.pmk
+*.uspec
+*.vs4ufrq
+
+#UTAU related tools
+$read
+*.setParam-Scache
+*.lbp
+*.lbp.caches/*
 
 #Deepvocal
 *.DVModel
@@ -22,10 +28,19 @@ SKC
 SKI
 SKC_1
 SKC_2
-SKC_3
-SKC_4
 *.sksd
 
 #VocalSharp
 *.scep
 *.vssf
+*.vsdx
+*.vsdxindex
+
+#Binary Archive
+*.7z
+*.zip
+*.rar
+*.exe
+
+*.bat
+*.ps1
